--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -1,4 +1,5 @@
 {% capture footer_contents %}
+Powered by <a href="https://github.com/alshedivat/al-folio">al-folio</a> | contact@lichess.org | <a href="https://github.com/cakiki/lichess-papers-test">Source code</a>
   {% if site.impressum_path %}
     <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
   {% endif %}
